--- a/pair.html
+++ b/pair.html
@@ -142,12 +142,12 @@
         <div id="text">
           <i class="fa fa-user"></i>
           <p>
-            <h3 class="centered-text">FLASH-MD PAIRING CODE</h3>
+            <h3 class="centered-text">IBRAHIM-TECH PAIRING CODE</h3>
             <br>
-            <h6>Made By France King®🐐.</h6>
+            <h6>Made By King Ibrahim.</h6>
             <h6>Enter Your Number with Country Code.</h6>
             <div class="input-container">
-              <input placeholder="254757835xxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
+              <input placeholder="25471077xxxxx" type="number" id="number" placeholder="Enter your Phone Pumber with Cuntry Code" name="">
               <button id="submit">Submit</button>
             </div>
             
