--- a/main.html
+++ b/main.html
@@ -76,13 +76,13 @@
 </head>
 <body>
 
-  <button onclick="window.open(`https://flash-md-qr.onrender.com`)" class="btn">QR Code</button>
+  <button onclick="window.open(`https://IBRAHIM_TECH-qr.onrender.com`)" class="btn">QR Code</button>
   <button onclick="window.open(`/pair`)" class="btn">Pair Code</button>
-  <button onclick="window.open(`https://github.com/franceking1/Flash-Md`)" class="btn">Bot Repo</button>
-  <button onclick="window.open(`https://wa.me/254757835036`)" class="btn">Contact Me</button>
-  <button onclick="window.open(`https://chat.whatsapp.com/CtBGmUkwXiA6kGYAyU5MaX`)" class="btn">Wa Group</button>
-  <button onclick="window.open(`https://whatsapp.com/channel/0029VaTbb3p84Om9LRX1jg0P`)" class="btn">Wa Channel</button>
-  <button onclick="window.open(`https://instagram.com/france.king1`)" class="btn">Instagram</button>
+  <button onclick="window.open(`https://github.com/ibrahimaitech/IBRAHIM-AI-10.10-pair`)" class="btn">Bot Repo</button>
+  <button onclick="window.open(`https://wa.me/message/74F2PC4JA4F3P1`)" class="btn">Contact Me</button>
+  <button onclick="window.open(`https://chat.whatsapp.com/L7T4iMvnfwCA8oLkUIRCFj`)" class="btn">Wa Group</button>
+  <button onclick="window.open(`https://chat.whatsapp.com/L7T4iMvnfwCA8oLkUIRCFj`)" class="btn">Wa Channel</button>
+  <button onclick="window.open(`https://instagram.com/Kingibrahim`)" class="btn">Instagram</button>
   
   
 
